[metadata]
name = vistools
version = 0.0.1
author = Nasrine Metic
author_email = nasrinemetic@yahoo.fr
description = A package to help analyse spatial transcriptomics 10X Visium data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
